# Monetize_Social

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  RESET_AND_RESUME.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
LICENSES/: APACHE-2.0.txt  BSD-3-Clause.txt  CC-BY-4.0.txt  GPL-3.0.txt  MPL-2.0.txt  UNLICENSE.txt
data/templates/: affiliate_blank_template_fillable.csv  affiliate_master_fillable.csv  outreach_crm_lite.csv  sponsor_discovery_tracker.csv  taxes_tracker_llc_1099_sole_prop.csv
docs/: INSTALL.md  README.md  USAGE.md
docs/legal/: affiliate-disclosure-template.md  affiliate_disclosure_template.md  cookie-policy-template.md  dmca-policy-template.md  earnings-disclaimer-template.md  earnings_disclaimer_template.md  privacy-policy-template.md  privacy_policy_template.md  terms-of-use-template.md  terms_of_use_template.md
docs/operations/: affiliate-onboarding-checklist.md  brand_outreach_email_template.md  compliance-audit-log.csv  compliance_checklist.md  easiest_onboarding_playbook.md  finance-payout-log.csv  onboarding_checklist.md  paperwork_register.csv  release_checklist.md  sponsorship_affiliate_playbook.md  tax_and_payout_checklist.md
scripts/: build_affiliate_outputs.py  build_all.py  build_runtime.py  create_onboarding_packets.py  validate_affiliate_data.py
scripts/hooks/: pre-commit
src/monetize_social/: __init__.py  affiliate_pipeline.py  campaigns.py  cli.py  email_draft.py  gui.py  prefs.py  (+3 more)
tests/: test_affiliate_pipeline.py  test_campaigns.py  test_procedure.py  test_sponsor_ops.py
