[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monetize-social"
version = "0.1.0"
description = "Affiliate operations tooling and paperwork templates"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "MonetizeSocial" }
]
dependencies = [
  "openpyxl>=3.1.5",
  "pandas>=2.2.0",
  "python-dateutil>=2.9.0.post0"
]

[project.scripts]
monetize-social-build = "monetize_social.cli:main"
monetize-social-gui = "monetize_social.gui:main"

[tool.setuptools.packages.find]
where = ["src"]
